--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "tests"
   },
   "scripts": {
-    "test": "testem ci"
+    "test": "testem ci",
+    "test:dev": "testem"
   },
   "repository": {
     "type": "git",
@@ -27,6 +28,6 @@
   },
   "homepage": "https://github.com/16patsle/pokeapi.js#readme",
   "devDependencies": {
-    "testem": "^1.6.0"
+    "testem": "^2.0.0"
   }
 }
