--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pokeapi.js",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "A simple JavaScript wrapper for the PokéAPI (v2), with simple built-in caching",
   "main": "dist/bundle.js",
   "module": "dist/bundle.esm.js",
@@ -11,7 +11,7 @@
     "pretest": "npm run build",
     "test": "testem ci",
     "test:dev": "testem",
-    "build": "rollup -c && rollup -c -f es -o dist/bundle.esm.js"
+    "build": "rollup -c && rollup -c -f es -o dist/pokeapi.esm.js"
   },
   "repository": {
     "type": "git",
@@ -24,7 +24,7 @@
     "json",
     "pokemon"
   ],
-  "author": "16patsle",
+  "author": "Patrick Sletvold",
   "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/16patsle/pokeapi.js/issues"
