--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,11 @@
 {
   "presets": [
-    ["env", {
-      "modules": false
+    ["@babel/preset-env", {
+      "useBuiltIns": "usage",
+      "bugfixes": true,
+      "shippedProposals": true,
+      "corejs": "3.23",
+      "targets": "defaults"
     }]
-  ],
-  "plugins": ["transform-object-rest-spread"]
+  ]
 }
