--- a/package.json
+++ b/package.json
@@ -31,11 +31,12 @@
   },
   "homepage": "https://github.com/16patsle/pokeapi.js#readme",
   "devDependencies": {
-    "babel-plugin-transform-object-rest-spread": "^6.13.0",
-    "babel-preset-env": "^1.6.1",
-    "rollup": "^0.56.2",
-    "rollup-plugin-babel": "^3.0.3",
-    "rollup-plugin-babel-minify": "^4.0.0",
-    "testem": "^2.9.2"
+    "@babel/core": "^7.18.5",
+    "@babel/preset-env": "^7.18.2",
+    "@rollup/plugin-babel": "^5.3.1",
+    "core-js": "^3.23.1",
+    "rollup": "^2.75.6",
+    "rollup-plugin-terser": "^7.0.2",
+    "testem": "^3.8.0"
   }
 }
