--- a/package.json
+++ b/package.json
@@ -35,10 +35,13 @@
     "@babel/core": "^7.18.5",
     "@babel/preset-env": "^7.18.2",
     "@rollup/plugin-babel": "^5.3.1",
+    "@rollup/plugin-typescript": "^8.3.3",
     "core-js": "^3.23.1",
     "prettier": "2.7.1",
     "rollup": "^2.75.6",
     "rollup-plugin-terser": "^7.0.2",
-    "testem": "^3.8.0"
+    "testem": "^3.8.0",
+    "tslib": "^2.4.0",
+    "typescript": "^4.7.4"
   }
 }
