--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@babel/core": "^7.18.5",
     "@babel/preset-env": "^7.18.2",
     "@rollup/plugin-babel": "^5.3.1",
+    "@rollup/plugin-commonjs": "^22.0.0",
     "@rollup/plugin-typescript": "^8.3.3",
     "core-js": "^3.23.1",
     "prettier": "2.7.1",
