--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "url": "https://github.com/16patsle/pokeapi.js/issues"
   },
   "homepage": "https://github.com/16patsle/pokeapi.js#readme",
+  "sideEffects": false,
   "devDependencies": {
     "@babel/core": "^7.18.5",
     "@babel/preset-env": "^7.18.2",
