--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "@16patsle/pokeapi.js",
   "version": "1.1.3",
   "description": "A simple JavaScript wrapper for the PokéAPI (v2), with simple built-in caching",
-  "main": "dist/bundle.js",
-  "module": "dist/bundle.esm.js",
+  "main": "dist/pokeapi.js",
+  "module": "dist/pokeapi.esm.js",
+  "types": "dist/types/index.d.ts",
   "directories": {
     "test": "tests"
   },
