--- a/package.json
+++ b/package.json
@@ -38,8 +38,10 @@
     "@babel/preset-env": "^7.18.2",
     "@rollup/plugin-babel": "^5.3.1",
     "@rollup/plugin-commonjs": "^22.0.0",
+    "@rollup/plugin-node-resolve": "^13.3.0",
     "@rollup/plugin-typescript": "^8.3.3",
     "core-js": "^3.23.1",
+    "idb": "^7.0.2",
     "prettier": "2.7.1",
     "rollup": "^2.75.6",
     "rollup-plugin-terser": "^7.0.2",
